add multipart store path

--- a/conf/storage.conf
+++ b/conf/storage.conf
@@ -106,8 +106,9 @@ store_path_count=1
 
 # store_path#, based 0, if store_path0 not exists, it's value is base_path
 # the paths must be exist
-store_path0=/var/fdfs
-#store_path1=/var/fdfs2
+store_path0=/var/fdfs0
+store_path1=/var/fdfs1
+store_path2=/var/fdfs2
 
 # subdir_count  * subdir_count directories will be auto created under each 
 # store_path (disk), value can be 1 to 256, default value is 256
