--- a/conf/mod_fastdfs.conf
+++ b/conf/mod_fastdfs.conf
@@ -7,7 +7,7 @@ connect_timeout=2
 network_timeout=30
 
 # the base path to store log files
-base_path=/tmp
+base_path=/var/fdfs
 
 # if load FastDFS parameters from tracker server
 # since V1.12
@@ -37,7 +37,7 @@ storage_ids_filename = storage_ids.conf
 # FastDFS tracker_server can ocur more than once, and tracker_server format is
 #  "host:port", host can be hostname or ip address
 # valid only when load_fdfs_parameters_from_tracker is true
-tracker_server=com.ikingtech.ch116221:22122
+tracker_server=192.168.209.121:22122
 
 # the port of the local storage server
 # the default value is 23000
@@ -54,13 +54,14 @@ url_have_group_name = true
 
 # path(disk or mount point) count, default value is 1
 # must same as storage.conf
-store_path_count=1
+store_path_count=3
 
 # store_path#, based 0, if store_path0 not exists, it's value is base_path
 # the paths must be exist
 # must same as storage.conf
-store_path0=/home/dfs
-#store_path1=/home/yuqing/fastdfs1
+store_path0=/var/fdfs0
+store_path1=/var/fdfs1
+store_path2=/var/fdfs2
 
 # standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
@@ -115,19 +116,23 @@ group_count = 2
 # group settings for group #1
 # since v1.14
 # when support multi-group on this storage server, uncomment following section
-#[group1]
+[group1]
 group_name=group1
 storage_server_port=23000
-store_path_count=2
-store_path0=/home/yuqing/fastdfs
-store_path1=/home/yuqing/fastdfs1
+store_path_count=3
+store_path0=/var/fdfs0
+store_path1=/var/fdfs1
+store_path2=/var/fdfs2
+
 
 # group settings for group #2
 # since v1.14
 # when support multi-group, uncomment following section as neccessary
-#[group2]
-#group_name=group2
-#storage_server_port=23000
-#store_path_count=1
-#store_path0=/home/yuqing/fastdfs
+[group2]
+group_name=group2
+storage_server_port=23000
+store_path_count=3
+store_path0=/var/fdfs0
+store_path1=/var/fdfs1
+store_path2=/var/fdfs2
 
