修改文件原始名称，直接添加filename

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -80,6 +80,10 @@ http {
         listen       8888;
         server_name  localhost;
         location ~/group[0-9]/ {
+            #if ($arg_attname ~ "^(.+)") {
+	    #    add_header Content-Type application/x-download;
+	    #    add_header Content-Disposition "attachment;filename=$arg_attname";
+            #}
             ngx_fastdfs_module;
         }
         error_page   500 502 503 504  /50x.html;
